--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = "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"
 PINECONE_ENV = "asia-southeast1-gcp-free"
 PINECONE_API_KEY = "15320b3d-0fcd-4db7-8397-9a715afce8a2"
+GOOGLE_API_KEY = "AIzaSyAYQrWP4G3ssdpBhK2Kx6eu_QH8dsjjFmU"
